--- a/notes/piketti.html
+++ b/notes/piketti.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Очень простое математическое опровержение основной идеи «Капитала в XXI веке», что превышение доходности капитала над скоростью роста экономики является причиной роста социального неравенства." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-04-10" />
-        <meta property="og:article:modified_time" content="2020-04-10" />
+        <meta property="og:article:modified_time" content="2020-04-11" />
 <meta property="og:title" content="Полезно решать дифференциальные уравнения: Тома Пикетти" />
 <meta property="og:url" content="https://onfin.github.io/notes/piketti" />
         <script>
@@ -71,7 +71,7 @@
             <h1>Полезно решать дифференциальные уравнения: Тома Пикетти</h1>
             <div class="meta">
                     <p class="description">Очень простое математическое опровержение основной идеи «Капитала в XXI веке», что превышение доходности капитала над скоростью роста экономики является причиной роста социального неравенства.</p>
-                    <p> Обновлено: <time>2020-04-10</time> </p>
+                    <p> Обновлено: <time>2020-04-11</time> </p>
 
             </div>
         </header>
@@ -93,6 +93,12 @@ $$ C_p(t) = \frac{s_p (1-\alpha) Y}{\delta} + C_p^{(0)} \mathrm{e}^{-\delta t}. 
 <p>$$ \lim_{t \rightarrow \infty} \frac{C_c}{C_p} = \frac{s_c}{s_p} \cdot \frac{\alpha}{1-\alpha}. $$</p>
 <p>Таким образом, предельный уровень социального неравенства определяется лишь неравенством в распределении производимых благ и различием в нормах сбережения. И ни о каком влиянии коэффициента $r$ или его отношения к $g$ не может идти и речи, это <em>математическая</em> истина (любопытный читатель может добавить в систему уравнение для роста экономики $dY/dt = g$, чтобы убедиться, что и в этом случае предел остаётся тот же).</p>
 <p>Т.е. если рост социального неравенства имеет место быть, его надо искать в другом месте.</p>
+<p>В чём фундаментальная ошибка Пикетти? Её легко увидеть, если записать выражение для доли благ, «присваиваемых» капиталистами:</p>
+<p>$$ \alpha = \frac{(r + \delta) C_c}{Y}. $$</p>
+<p>Отсюда очень легко придти к очевидному (и неверному!) выводу о том, что когда $C_c$ растёт быстрее $Y$, $\alpha$ устремляется в бесконечность и капиталисты буквально выжирают всю экономику. Достаточно забыть о том, что капитал требует расходов на содержание и возобновление тем больше, чем больше этот самый капитал (и о том, что не весь полученный доход реинвестируется, но это несущественная деталь).</p>
+<p>Интересно, что модель позволяет записать выражение для предельной отдачи на капитал (которая падает с ростом доли сбережений):
+$$ r_{\infty} = \delta \frac{1-s_c}{s_c}, $$
+но <strong>не</strong> позволяет найти предельную долю присваиваемых благ $\alpha_{\infty}$, это свободный параметр системы, для которого нужна другая модель.</p>
         </div>
         <aside>
             <div style="display: flex; flex-direction: column; text-align: right;">
