--- a/literacy/instruments/realty.html
+++ b/literacy/instruments/realty.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Вложения в недвижимость — какова реальная доходность и риски." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-01-07" />
-        <meta property="og:article:modified_time" content="2020-01-07" />
+        <meta property="og:article:modified_time" content="2020-04-20" />
 <meta property="og:title" content="Недвижимость" />
 <meta property="og:url" content="https://onfin.github.io/literacy/instruments/realty" />
 
@@ -57,7 +57,7 @@
             <h1>Недвижимость</h1>
             <div class="meta">
                     <p class="description">Вложения в недвижимость — какова реальная доходность и риски.</p>
-                    <p> Обновлено: <time>2020-01-07</time> </p>
+                    <p> Обновлено: <time>2020-04-20</time> </p>
 
             </div>
         </header>
@@ -65,26 +65,26 @@
         <div class="content">
             <div class="toc">
 <ul>
-<li><a href="#_1">Арендная недвижимость</a></li>
+<li><a href="#_1">Арендная жилая недвижимость</a></li>
 <li><a href="#_2">Коммерческая недвижимость</a></li>
 <li><a href="#_3">Строящаяся недвижимость</a></li>
 <li><a href="#_4">Правильные инвестиции в недвижимость</a></li>
 </ul>
 </div>
-<h2 id="_1">Арендная недвижимость</h2>
+<h2 id="_1">Арендная жилая недвижимость</h2>
 <p>Агентства недвижимости постоянно радуют нас примерно такими графиками <a href="https://www.fedstat.ru/indicator/31452">стоимости жилья</a> и <a href="https://www.fedstat.ru/indicator/31448">аренды</a> (стоимость аренды до 2005 года реконструирована исходя из средней доходности за последующий период, которая достаточно стабильна), убеждая в том, что недвижимость — это надёжно и выгодно.</p>
 <p><img src=/literacy/instruments/realty_price_rent.svg style="width: 100%; height: 50wv" /></p>
 <p>(Все графики — рост в разах относительно начального значения, рост капитала — при реинвестировании арендных платежей.)</p>
 <p>Однако реальность, в которой свирепствует инфляция, гораздо кислее:</p>
 <p><img src=/literacy/instruments/realty_price_rent_real.svg style="width: 100%; height: 50wv" /></p>
-<p>В реальном выражении цены на квартиры и арендная плата вернулись к уровню 2000г и продолжают снижаться. В принципе, так и должно быть. Согласно фундаментальному исследованию <a href="https://www.nber.org/papers/w24112">The Rate of Return on Everything, 1870-2015</a> по данным Европы, Японии и США за 150 лет, реальный рост средних цен на недвижимость и арендной платы в долгосрочном периоде отсутствует. А средняя доходность арендной платы колеблется в очень узких пределах вокруг 8%г, ровно эту же картину мы наблюдаем и на нашем рынке недвижимости.</p>
+<p>В реальном выражении цены на квартиры и арендная плата вернулись к уровню 2000г и продолжают снижаться. В принципе, так и должно быть. Согласно фундаментальному исследованию <a href="https://www.nber.org/papers/w24112">The Rate of Return on Everything, 1870-2015</a> по данным Европы, Японии и США за 150 лет, реальный рост средних цен на недвижимость и арендной платы в долгосрочном периоде составляет приблизительно 1%г, да и то за счёт периода, соответствующего взрывному росту численности населения; продолжение этого тренда сомнительно, а для российских просторов он и вовсе нерелевантен. Средняя доходность арендной платы колеблется в очень узких пределах вокруг 8%г, ровно эту же картину мы наблюдаем и на нашем рынке недвижимости.</p>
 <p>Но это ещё не всё. Приведённые данные — средние по находящимся в продаже объектам. Строятся новые дома, в которых квадратный метр дороже — средняя цена растёт. Совсем ветхое жильё, которое уже брошено, сюда даже не попадёт. Равно как и сгоревшие квартиры, и квартиры из аварийных домов.</p>
-<p>По оценкам того же исследования, 1,5–2%г приходится на обесценение жилья из-за обветшания (либо эквивалентную сумму необходимо расходовать на капремонт для поддержания цены). Если вы на нашем рынке посмотрите на зависимость средней стоимости квадратного метра от года постройки дома, то увидите примерно такую же скорость обесценения.</p>
+<p>По оценкам того же исследования, примерно 1,5%г приходится на обесценение жилья из-за обветшания (либо эквивалентную сумму необходимо расходовать на капремонт для поддержания цены). Если вы на нашем рынке посмотрите на зависимость средней стоимости квадратного метра от года постройки дома, то увидите примерно такую же скорость обесценения.</p>
 <p>Ещё примерно 0,5%г стоит страхование недвижимости от несчастных случаев. Они никак не могут быть учтены в индексе цен на недвижимость, но вам так или иначе придётся иметь с ними дело. Если у вас будет несколько тысяч объектов, то вы примерно эти же 0,5% будете в среднем в год терять из-ра различных происшествий на них. Если объект один или несколько — вы несёте риск потерять весь свой вложенный капитал целиком.</p>
 <p>Стоимость вашей недвижимости также может быть уничтожена градостроительной политикой, если под вашими окнами вдруг решат построить автомагистраль вместо леса, или эстакаду над домом, воткнуть окна-в-окна многоэтажку, или устроить парковку нового торгового центра. Также вашу недвижимость могу просто изъять «для государственных или муниципальных нужд», выплатив компенсацию по «государственной» же цене. Имеются и другие риски, не покрываемые страховкой: например, падение стоимости квартиры из-за безнадёжно затопленного подвала или трещины в фундаменте дома. Я не знаю как рассчитать их в деньгах, добавим 0,2%г к стоимости страховки.</p>
 <p>На риск оспаривания вашего права собственности закроем глаза, пусть вы приобретаете квартиру у застройщика или очень тщательно проверяете её историю.</p>
 <p>Налоги на недвижимость на Западе доходят до 1–2%г, у нас пока 0,1–0,3%г, но в ближайшем будущем, думаю, будут повышаться. Добавим ещё 0,2%г к стоимости содержания жилья.</p>
-<p>Опять же, учёт арендных платежей в общей доходности предполагает, что квартира у вас не простаивает, а арендаторы весь текущий ремонт делают за свой счёт. В реальности, конечно, будут и простои, а из-за некоторых арендаторов вы будете попадать в полугодовой неплатёж с последующим полугодовым простем из-за капитального ремонта стоимостью в две–три годовых аренды. Оценим все эти риски в 20% от арендной платы. Ещё 13% уйдёт на налоги. Итого треть от арендной платы или 2,4%г т.к. годовая арендная плата составляет в среднем 8% от стоимости жилья.</p>
+<p>Опять же, учёт арендных платежей в общей доходности предполагает, что квартира у вас не простаивает, а арендаторы весь текущий ремонт делают за свой счёт. В реальности, конечно, будут и простои, а из-за некоторых арендаторов вы будете попадать в полугодовой неплатёж с последующим полугодовым простем из-за капитального ремонта стоимостью в две–три годовых аренды. Оценим все эти риски в 20% от арендной платы (1 раз в двадцать лет попадаем на неоплату + простой + ремонт с совокупными потерями в 3 годовых аренды, это съест 15% от годовой арендной платы, ещё 5% закладываем на текущие мелочи). Ещё 13% уйдёт на налоги. Итого треть от арендной платы или 2,6%г т.к. годовая арендная плата составляет в среднем 8% от стоимости жилья (1,9%г если вы сдаёте квартиру в режиме самозанятости).</p>
 <p>Вам, конечно, придётся ещё иметь дело с реинвестированием арендных платежей т.к. покупать следующую квартиру после каждого платежа (и даже по итогам года) у вас едва ли получится, но оставим его в нашей модели доходности.</p>
 <p>Помимо этого вы будете затрачивать силы и время на поиск арендаторов и взаимодействие с ними, соседями и коммунальщиками (а в некоторых случаях — и с полицией по поводу своих арендаторов). Я не включаю эти расходы в модель, но рекомендую задуматься (как и во всех других сценариях вложений) над тем, чтобы определить, какую зарплату вы хотели бы получать, если бы кто-то нанимал вас этим всем заниматься. Эту зарплату стоит вычитать из доходности вложений.</p>
 <p>Таким образом у нас получилось, что содержание жилья обходится примерно в 2,4%г, ещё 2,4%г уходит на операционные риски и налоги, а остаётся от итоговой доходности 3,4%г (как и в упомянутом исследовании, если учесть простои, ремонт за арендаторами и налоги), а в наших условиях будем иметь следующую картину:</p>
@@ -106,7 +106,7 @@
 <p>Помимо риска застройщика, вы также несёте риск и снижения общего уровня цен на недвижимость (а у нас он непрерывно падает, в реальном выражении, с 2008г), в результате чего даже номинальная стоимость квартиры после сдачи может оказаться равной стоимости на стадии котлована, а то и ниже её. Плату за этот риск вы тоже не получаете.</p>
 <p>Для получения реальной доходности с рынка строящейся недвижимости нужно очень тщательно анализировать и деятельность застройщика, и градостроительные планы в районе объекта недвижимости (а они бывают коварны: многие покупают недвижимость в Москве-Петербурге в расчёте на скорую постройку станции метро с соответствующим подорожанием недвижимости, а станцию или строят 15 лет вместо трёх, или вовсе переносят в другое место), и динамику ситуации на рынке в целом.</p>
 <h2 id="_4">Правильные инвестиции в недвижимость</h2>
-<p>Если вы хотите иметь недвижимость в своём портфеле, но не хотите испытывать свой профессионализм в выборе объектов недвижимости и взаимодействии с арендаторами, а также принимать на себя недиверсифицированные риски, купите на бирже ETF на мировую недвижимость, и всеми этими вопросами займутся профессиональные управляющие компании (у которых издержки на страхование и управление значительно ниже, чем у вас), а вам останется только получать свои 5%г арендных платежей. Дополнительными плюсами будут:</p>
+<p>Если вы хотите иметь недвижимость в своём портфеле, но не хотите испытывать свой профессионализм в выборе объектов недвижимости и взаимодействии с арендаторами, а также принимать на себя недиверсифицированные риски, купите на бирже ETF на мировую недвижимость, и всеми этими вопросами займутся профессиональные управляющие компании (у которых издержки на страхование и управление значительно ниже, чем у вас, из-за эффекта масштаба), а вам останется только получать свои 5%г (чистая доходность недвижимости как класса активов получается чуть больше 6%г, однако рынок устанавливает цены так, чтобы соотношение риск/доходность у разных инструментов было примерно одинаковым, а риски недвижимости примерно такие же как и акций). Дополнительными плюсами будут:</p>
 <ul>
 <li>широчайшая диверсификация: сотни тысяч объектов по всему миру,</li>
 <li>доступ не только к жилой и коммерческой недвижимости, но и к специальной: медицинской, правительственной и даже военной,</li>
@@ -115,7 +115,8 @@
 <li>среднерыночная доходность (около 5%г до налогов): рыночная оценка управляющей компании основывается не на стоимости находящейся под её управлением недвижимости, а по её способности получать от этой недвижимости доход.</li>
 </ul>
 <p>Но, опять же, в России таких нет, нужно выходить на зарубежного брокера.</p>
-<p>Если вас привлекает какой-то отдельный сегмент, можно купить долю в недвижимости под управлением конкретной УК — REIT. Но в этом случае вы подписываетесь под операционные риски данной конкретной УК, которые сопоставимы с рисками отдельного объекта недвижимости (хотя в случае REIT ваша ожидаемая доходность будет всё-таки выше — из-за того, что рынок оценивает и включает эти риски в стоимость пая, что проблематично на неликвидном рынке непосредственно недвижимости), поэтому я бы всё-таки рекомендовал ETF — фонды из множества REIT'ов.</p>
+<p>Если вас привлекает какой-то отдельный сегмент, можно купить долю в недвижимости под управлением конкретной УК — REIT. Но в этом случае вы подписываетесь под операционные риски данной конкретной УК, которые сопоставимы с рисками отдельного объекта недвижимости (хотя в случае REIT ваша ожидаемая доходность будет всё-таки выше — из-за того, что рынок оценивает и включает эти риски в стоимость пая, что проблематично на неликвидном рынке физической недвижимости), поэтому я бы всё-таки рекомендовал ETF — фонды из множества REIT'ов.</p>
+<p>Однако, есть исследование, что <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=2965146">динамика фонда REITов представима как портфель из 66% недооценённых компаний малой капитализации + 34% корпоративных облигаций</a>, причём такой портфель доходнее. Т.е. если в вашем портфеле уже есть и то, и другое, то дополнительное добавление в него фондов на недвижимость, скорее всего, практически не уменьшит риски, но заметно снизит ожидаемую доходность.</p>
         </div>
         <aside>
             <div style="display: flex; flex-direction: column; text-align: right;">
