--- a/literacy/deposits.html
+++ b/literacy/deposits.html
@@ -27,7 +27,7 @@
                 },
                 chtml: {
                     scale: 1,
-                    matchFontHeight: false
+                    matchFontHeight: true
                 }
             };
         </script>
