--- a/literacy/intro.html
+++ b/literacy/intro.html
@@ -27,7 +27,7 @@
                 },
                 chtml: {
                     scale: 1,
-                    matchFontHeight: false
+                    matchFontHeight: true
                 }
             };
         </script>
