--- a/notes/diversification_math2/index.html
+++ b/notes/diversification_math2/index.html
@@ -116,7 +116,7 @@
     <div class="pure-g">
     <div class="pure-u-1-3 left"><a href="/notes/diversification_math"> &lt;&lt; Математика диверсификации: портфельный эффект и ребалансировка между акциями </a></div>
     <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/notes/inflation"> Инфляция &gt;&gt; </a></div>
+    <div class="pure-u-1-3 right"><a href="/notes/mpt"> (Не)Математика диверсификации-3: современная теория портфеля &gt;&gt; </a></div>
     </div>
 </div>
 </div>
