--- a/notes/inflation.html
+++ b/notes/inflation.html
@@ -133,7 +133,7 @@
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/notes/diversification_math2"> &lt;&lt; Математика диверсификации-2: доходность и риск </a></div>
+    <div class="pure-u-1-3 left"><a href="/notes/mpt"> &lt;&lt; (Не)Математика диверсификации-3: современная теория портфеля </a></div>
     <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
     <div class="pure-u-1-3 right"><a href="/notes/bonds_in_portfolio"> Облигации в инвестиционном портфеле &gt;&gt; </a></div>
     </div>
