diversification_math2 60/50 fix

--- a/notes/diversification_math2/index.html
+++ b/notes/diversification_math2/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Как разное определение финансовых рисков может менять оптимальное для инвестора соотношение активов в портфеле." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-12-07" />
-        <meta property="og:article:modified_time" content="2020-04-16" />
+        <meta property="og:article:modified_time" content="2020-04-23" />
 <meta property="og:title" content="Математика диверсификации-2: доходность и риск" />
 <meta property="og:url" content="https://onfin.github.io/notes/diversification_math2" />
 
@@ -57,7 +57,7 @@
             <h1>Математика диверсификации-2: доходность и риск</h1>
             <div class="meta">
                     <p class="description">Как разное определение финансовых рисков может менять оптимальное для инвестора соотношение активов в портфеле.</p>
-                    <p> Обновлено: <time>2020-04-16</time> </p>
+                    <p> Обновлено: <time>2020-04-23</time> </p>
 
             </div>
         </header>
@@ -89,7 +89,7 @@
 <p>Добавление любого количества облигаций в портфель увеличивает этот риск. Поэтому их у меня в портфеле и нет.</p>
 <p>Очень интересно ведёт себя этот «прагматический» риск с увеличением горизонта инвестирования.</p>
 <p><img src=/notes/diversification_math2/risk_prag_t.svg style="width: 100%; height: 50wv" /></p>
-<p>Вероятность получить полный провал на портфеле, целиком состоящем из акций, в первые годы весьма велика и первые 10 лет только растёт, однако с дальнейшим увеличением горизонта инвестиций снижается. Важно понимать, что этот график смотрит «назад», а не «вперёд». Т.е. по итогам каждого завершившегося года у вас может быть просадка 45% относительно базового сценария (5%г реальной доходности), по итогам последних 10 лет — 65%, а вот по итогам 30 лет — едва ли 30%. Облигации, очевидно, требуемую реальную доходность дать не могут, но за несколько лет сильно не обесценятся, а с увеличением горизонта риск стремится к 100%. А вот сбалансированный портфель 60/40 стабилизируется в районе долгосрочной доходности 1,5%г, от которой на 30 годах даёт отклонение в размере капитала не более 30% (как в лучшую, так и в худшую стороны). Т.к. сейчас у вас есть ОФЗ-ИН — 1,5%г купона сверх инфляции — покупайте лучше их, чем заморачиваться с таким портфелем, если это ваш случай.</p>
+<p>Вероятность получить полный провал на портфеле, целиком состоящем из акций, в первые годы весьма велика и первые 10 лет только растёт, однако с дальнейшим увеличением горизонта инвестиций снижается. Важно понимать, что этот график смотрит «назад», а не «вперёд». Т.е. по итогам каждого завершившегося года у вас может быть просадка 45% относительно базового сценария (5%г реальной доходности), по итогам последних 10 лет — 65%, а вот по итогам 30 лет — едва ли 30%. Облигации, очевидно, требуемую реальную доходность дать не могут, но за несколько лет сильно не обесценятся, а с увеличением горизонта риск стремится к 100%. А вот сбалансированный портфель 60/40 стабилизируется в районе долгосрочной доходности около 2,5%г (если пересчитать в годовую доходность с учётом итоговой потери капитала, что соответствует средневзвешенной доходности активов в портфеле), при которой на 30 годах даёт просадку в размере капитала не более 30% (как в лучшую, так и в худшую стороны).</p>
 <p>Ссылки на исходные данные в начале статьи, <a href="/notes/diversification_math2/risk.py">код для расчёта и построения графиков</a>.</p>
         </div>
         <aside>
