--- a/notes/aboutme.html
+++ b/notes/aboutme.html
@@ -96,7 +96,7 @@
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/notes/piketti"> &lt;&lt; Полезно решать дифференциальные уравнения: Тома Пикетти </a></div>
+    <div class="pure-u-1-3 left"><a href="/notes/piketti2"> &lt;&lt; Социальное неравенство и налоги </a></div>
     <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
     <div class="pure-u-1-3 right"><a href="/notes/system"> Как организованы мои финансы &gt;&gt; </a></div>
     </div>
