--- a/notes/index.html
+++ b/notes/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Краткие заметки в систематическом порядке" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-16" />
-        <meta property="og:article:modified_time" content="2020-04-21" />
+        <meta property="og:article:modified_time" content="2020-04-25" />
 <meta property="og:title" content="Заметки о финансах" />
 <meta property="og:url" content="https://onfin.github.io/notes" />
 
@@ -82,6 +82,7 @@
 <li><a href="/notes/fairprice">Справедливая цена</a></li>
 <li><a href="/notes/workersfactories">Фабрики — рабочим</a></li>
 <li><a href="/notes/piketti">Полезно решать дифференциальные уравнения: Тома Пикетти</a></li>
+<li><a href="/notes/piketti2">Социальное неравенство и налоги</a></li>
 </ol>
 <h2 id="_4">Обо мне</h2>
 <ol>
