--- a/notes/piketti.html
+++ b/notes/piketti.html
@@ -124,7 +124,7 @@ $$ r_{\infty} = \delta \frac{1-s_c}{s_c}, $$
     <div class="pure-g">
     <div class="pure-u-1-3 left"><a href="/notes/workersfactories"> &lt;&lt; Фабрики — рабочим </a></div>
     <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/notes/aboutme"> Кто я и как дошёл до жизни такой &gt;&gt; </a></div>
+    <div class="pure-u-1-3 right"><a href="/notes/piketti2"> Социальное неравенство и налоги &gt;&gt; </a></div>
     </div>
 </div>
 </div>
