--- a/notes/piketti2/index.html
+++ b/notes/piketti2/index.html
@@ -121,7 +121,15 @@
     </main>
 
     <footer>
-
+<div class="pure-g">
+<div class="pagination pure-u-1 pure-u-lg-9-12">
+    <div class="pure-g">
+    <div class="pure-u-1-3 left"><a href="/notes/piketti"> &lt;&lt; Полезно решать дифференциальные уравнения: Тома Пикетти </a></div>
+    <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
+    <div class="pure-u-1-3 right"><a href="/notes/aboutme"> Кто я и как дошёл до жизни такой &gt;&gt; </a></div>
+    </div>
+</div>
+</div>
 
         <div class="disclaimer">
             <p>Здесь я выкладываю лишь собственные размышления/исследования/расчёты, иногда собственное же изложение чужих мнений или результатов исследований. Размещённая информация может содержать ошибки, быть неактуальной на момент прочтения, допускать множество интерпретаций и проч. Я не занимаюсь образовательной деятельностью и не даю инвестиционных рекомендаций ни на этом сайте, ни в частном порядке.</p>
