--- a/notes/bonds_in_portfolio/index.html
+++ b/notes/bonds_in_portfolio/index.html
@@ -132,7 +132,7 @@
     <div class="pure-g">
     <div class="pure-u-1-3 left"><a href="/notes/inflation"> &lt;&lt; Инфляция </a></div>
     <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/notes/fairprice"> Справедливая цена &gt;&gt; </a></div>
+    <div class="pure-u-1-3 right"><a href="/notes/markettiming"> Выбор времени для покупки акций &gt;&gt; </a></div>
     </div>
 </div>
 </div>
