--- a/notes/index.html
+++ b/notes/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Краткие заметки в систематическом порядке" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-10-16" />
-        <meta property="og:article:modified_time" content="2020-04-25" />
+        <meta property="og:article:modified_time" content="2020-05-04" />
 <meta property="og:title" content="Заметки о финансах" />
 <meta property="og:url" content="https://onfin.github.io/notes" />
 
@@ -76,6 +76,7 @@
 <li><a href="/notes/mpt">(Не)Математика диверсификации-3: современная теория портфеля</a></li>
 <li><a href="/notes/inflation">Инфляция</a></li>
 <li><a href="/notes/bonds_in_portfolio">Облигации в инвестиционном портфеле</a></li>
+<li><a href="/notes/markettiming">Выбор времени для покупки акций</a></li>
 </ol>
 <h2 id="_3">Экономические этюды</h2>
 <ol>
