--- a/notes/markettiming/index.html
+++ b/notes/markettiming/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Не обнаружена стратегия, которая позволила бы выбрать точку входа так, чтобы снизить риск инвестиций. Даже всеведущий ГосподьБог может снизить ожидаемую просадку всего на 15%, но наихудшей в 70% всё равно не избежит." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-05-04" />
-        <meta property="og:article:modified_time" content="2020-05-04" />
+        <meta property="og:article:modified_time" content="2020-05-06" />
 <meta property="og:title" content="Выбор времени для покупки акций" />
 <meta property="og:url" content="https://onfin.github.io/notes/markettiming" />
 
@@ -57,7 +57,7 @@
             <h1>Выбор времени для покупки акций</h1>
             <div class="meta">
                     <p class="description">Не обнаружена стратегия, которая позволила бы выбрать точку входа так, чтобы снизить риск инвестиций. Даже всеведущий ГосподьБог может снизить ожидаемую просадку всего на 15%, но наихудшей в 70% всё равно не избежит.</p>
-                    <p> Обновлено: <time>2020-05-04</time> </p>
+                    <p> Обновлено: <time>2020-05-06</time> </p>
 
             </div>
         </header>
@@ -79,6 +79,9 @@
 <p>Посмотрим на фундаментальный индикатор, CAPE Шиллера (кстати, он обновил методику расчёта, и теперь при корректном учёте байбэков этот показатель стал гораздо ровнее и практически ушла аномальная «ступенька» в его среднеисторическом уровне после 1990-х). Рассмотрим варианты с ожиданием падения текущего CAPE ниже среднего (20). Этот подход можно было бы считать довольно хорошим, если вас устраивает потеря доходности в 0,5%г и иногда более выскокая просадка на инфляции из-за пережидания «перегретого» рынка: от 10% наихудших случаев этот подход защитит. Но проблема в том, что он неустойчив: на исторических данных можно подобрать такой уровень, который показывает приемлемый для нас результат, но это именно подбор на исторических данных. Мы не знаем, какой уровень CAPE <em>в будущем</em> будет давать те же характеристики, а знать мы должны точно: выбор 18 или 22 вместо 20 на исторических данных оставляет нас только с просадкой и потерей доходности, но без защиты. Возможно, CAPE окажется хорош привыборе соотношения разных рынков в портфеле, но для этого будет отдельное исследование (хотя такая неустойчивость уже даёт почву для серьёзных сомнений).</p>
 <p><img src=/notes/markettiming/stocks_dd_distr.svg style="width: 100%; height: 50wv" />
 <img src=/notes/markettiming/stocks_y_distr.svg style="width: 100%; height: 50wv" /></p>
+<p>Также важно учитывать, что лучшие и худшие годы для разных стратегий не совпадают. Поэтому если даже распределение доходности одной стратегии всегда лежит выше чем у другой, это не значит, что она будет вести себя лучше неё всегда. Посмотрим как стратегия ГосподаБога обгоняет разовое вложение на всех возможных 3-летних интервалах:</p>
+<p><img src=/notes/markettiming/stocks_abs_outperf.svg style="width: 100%; height: 50wv" /></p>
+<p>В 20% случаев она отстаёт, и очень сильно отстаёт. Очень многие, попав в такой неудачный момент, могут не выдержать, сравнивая свои результаты с базовым сценарием, и просто зафиксировать убыток.</p>
 <p>В общем, не выбирайте время для покупки акций. Если есть деньги, которые вы можете скормить рынку, — скармливайте сразу. Даже ГосподьБог не может получить результат сильно лучше.</p>
         </div>
         <aside>
