--- a/literacy/index.html
+++ b/literacy/index.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Циклы статей о финансовой грамотности" />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2018-12-01" />
-        <meta property="og:article:modified_time" content="2020-02-10" />
+        <meta property="og:article:modified_time" content="2020-05-06" />
 <meta property="og:title" content="Грамотность" />
 <meta property="og:url" content="https://onfin.github.io/literacy" />
 
@@ -66,7 +66,6 @@
 <li><a href="/literacy/intro">Введение</a></li>
 <li><a href="/literacy/notaboutmoney">Бережливость — это не про деньги</a></li>
 <li><a href="/literacy/reserves">Формирование резервов</a></li>
-<li><a href="/literacy/stocks">Акции и их смысл</a></li>
 <li><a href="/literacy/returns">Анатомия доходности</a></li>
 </ol>
 <h2 id="_2">Практика</h2>
@@ -93,6 +92,7 @@
 <li><a href="/literacy/instruments/bonds">Облигации</a></li>
 <li><a href="/literacy/instruments/gold">Золото</a></li>
 <li><a href="/literacy/instruments/realty">Недвижимость</a></li>
+<li><a href="/literacy/instruments/stocks">Акции</a></li>
 </ol>
         </div>
         <aside>
