--- a/literacy/instruments/realty.html
+++ b/literacy/instruments/realty.html
@@ -142,7 +142,7 @@
     <div class="pure-g">
     <div class="pure-u-1-3 left"><a href="/literacy/instruments/gold"> &lt;&lt; Золото </a></div>
     <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
-    <div class="pure-u-1-3 right"></div>
+    <div class="pure-u-1-3 right"><a href="/literacy/instruments/stocks"> Акции &gt;&gt; </a></div>
     </div>
 </div>
 </div>
