--- a/literacy/reserves.html
+++ b/literacy/reserves.html
@@ -133,7 +133,7 @@
     <div class="pure-g">
     <div class="pure-u-1-3 left"><a href="/literacy/notaboutmoney"> &lt;&lt; Бережливость — это не про деньги </a></div>
     <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/literacy/stocks"> Акции и их смысл &gt;&gt; </a></div>
+    <div class="pure-u-1-3 right"><a href="/literacy/returns"> Анатомия доходности &gt;&gt; </a></div>
     </div>
 </div>
 </div>
