--- a/literacy/returns/index.html
+++ b/literacy/returns/index.html
@@ -145,7 +145,7 @@
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/literacy/stocks"> &lt;&lt; Акции и их смысл </a></div>
+    <div class="pure-u-1-3 left"><a href="/literacy/reserves"> &lt;&lt; Формирование резервов </a></div>
     <div class="pure-u-1-3 center"><a href="/literacy"> &uarr; Грамотность &uarr; </a></div>
     <div class="pure-u-1-3 right"><a href="/literacy/howto"> Пенсия своими силами. Пошаговое руководство &gt;&gt; </a></div>
     </div>
