--- a/literacy/instruments/stocks.html
+++ b/literacy/instruments/stocks.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Что такое акции, зачем предприятия их выпускают, историческая доходность акций, как выбрать акции и время для их покупки." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2020-05-06" />
-        <meta property="og:article:modified_time" content="2020-05-06" />
+        <meta property="og:article:modified_time" content="2020-05-07" />
 <meta property="og:title" content="Акции" />
 <meta property="og:url" content="https://onfin.github.io/literacy/instruments/stocks" />
 
@@ -57,7 +57,7 @@
             <h1>Акции</h1>
             <div class="meta">
                     <p class="description">Что такое акции, зачем предприятия их выпускают, историческая доходность акций, как выбрать акции и время для их покупки.</p>
-                    <p> Обновлено: <time>2020-05-06</time> </p>
+                    <p> Обновлено: <time>2020-05-07</time> </p>
 
             </div>
         </header>
@@ -78,7 +78,7 @@
 <p>Акция — это документ о праве на долю в компании (<em>эмитенте</em> акций). Покупая акции вы становитесь совладельцем предприятия, получая права на управление им (в виде голосования на собрании акционеров по основным вопросам деятельности компании и выдвижения своих представителей в совет директоров), получение заработанной им прибыли и остатков после распродажи имущества и выплаты долгов при ликвидации. В пределах своей доли, конечно.</p>
 <p>У акции, как и облигации, есть <em>номинал</em>, однако он используется только при определении размера доли акционера (если у компании несколько видов акций с разным номиналом) и ещё накладывает некоторые ограничения на возможные операции с акциями со стороны эмитента, которые нам едва ли когда-нибудь могут быть интересны (например, при выкупе и погашении акций эмитентом, номинальная стоимость оставшихся в обращении акций не может быть меньше уставного капитала).</p>
 <p>Смысл любого коммерческого предприятия — в зарабатывании прибыли для своих владельцев, а владельцы — это и есть акционеры. У предприятия свой карман, просто так в него не залезть. Чтобы деньги предприятия стали деньгами владельцев необходимо выплатить <em>дивиденды</em>. Их размер определяет <em>совет директоров</em>, также избранный акционерами на общем голосовании, исходя из размера заработанной прибыли, дивидендной политики компании и экономических соображений. Окончательное решение о выплате дивидендов — опять же, за общим собранием акционеров: возможно, они посчитают более выгодным направить эти деньги на развитие ппредприятия или в резерв, а свою прибыль забрать потом.</p>
-<p>Как и облигации, акции можно купить и продать на бирже, внебиржевом рынке, а также на первичном размещении (IPO, initial public offering) или вторичном размещении (SPO, secondary public offering) при дополнительной эмиссии. Приобрететие акций на первичных размещениях и внебиржевом рынке сопряжено с более высокими комиссиями, а также требует специальных навыков — самостоятельной оценки справедливой стоимости компании, т.к. на неликвидном внебиржевом рынке или IPO встреченная вами цена скорее всего будет соответствовать желанию продавца получить за свои акции больше денег, а не равновесную рыночную оценку стоимости акции. Неликвидных акций на бирже это тоже касается (а в некоторые моменты времени и вовсе все акции становятся неликвидными).</p>
+<p>Как и облигации, акции можно купить и продать на бирже, внебиржевом рынке, а также на первичном размещении (IPO, initial public offering) или вторичном размещении (SPO, secondary public offering) при дополнительной эмиссии. Приобретение акций на первичных размещениях и внебиржевом рынке сопряжено с более высокими комиссиями, а также требует специальных навыков — самостоятельной оценки справедливой стоимости компании, т.к. на неликвидном внебиржевом рынке или IPO встреченная вами цена скорее всего будет соответствовать желанию продавца получить за свои акции больше денег, а не равновесную рыночную оценку стоимости акции. Неликвидных акций на бирже это тоже касается (а в некоторые моменты времени и вовсе все акции становятся неликвидными).</p>
 <h2 id="_2">Виды акций</h2>
 <p><strong>Обыкновенные</strong> (обычка, ао, common stocks). Просто акции со всеми обычными правами. У компании может быть несколько типов обыкновенных акций, различающихся номиналом, и, соответственно, представляющих разный размер доли в компании.</p>
 <p><strong>Привилегированные</strong> (префы, ап, preffered stocks). Их «привилегия» заключается в том, что их держатели имеют преимущественное право на дивиденды и остатки от распродажи имущества. А вот голосовать на общем собрании они могут только в том случае, если дивиденды выплачены не были.</p>
