--- a/literacy/stocks.html
+++ b/literacy/stocks.html
@@ -18,7 +18,7 @@
     <meta property="og:description" content="Что такое акции, зачем предприятия их выпускают, как ведёт себя цена акций, почему и как их следует покупать." />
     <meta property="og:type" content="article" />
         <meta property="og:article:published_time" content="2019-12-07" />
-        <meta property="og:article:modified_time" content="2020-04-25" />
+        <meta property="og:article:modified_time" content="2020-05-06" />
 <meta property="og:title" content="Акции и их смысл" />
 <meta property="og:url" content="https://onfin.github.io/literacy/stocks" />
 
@@ -59,13 +59,13 @@
             <h1>Акции и их смысл</h1>
             <div class="meta">
                     <p class="description">Что такое акции, зачем предприятия их выпускают, как ведёт себя цена акций, почему и как их следует покупать.</p>
-                    <p> Обновлено: <time>2020-04-25</time> </p>
+                    <p> Обновлено: <time>2020-05-06</time> </p>
 
             </div>
         </header>
 
         <div class="content">
-            
+            <p>Статья перенесена <a href="/literacy/instruments/stocks">сюда</a>.</p>
         </div>
         <aside>
             <div style="display: flex; flex-direction: column; text-align: right;">
