--- a/notes/fairprice.html
+++ b/notes/fairprice.html
@@ -98,7 +98,7 @@
 <div class="pure-g">
 <div class="pagination pure-u-1 pure-u-lg-9-12">
     <div class="pure-g">
-    <div class="pure-u-1-3 left"><a href="/notes/markettiming"> &lt;&lt; Выбор времени для покупки акций </a></div>
+    <div class="pure-u-1-3 left"><a href="/notes/market_to_gdp"> &lt;&lt; Рост ВВП, прибыли компаний, капитализация и доходность рынка акций </a></div>
     <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
     <div class="pure-u-1-3 right"><a href="/notes/workersfactories"> Фабрики — рабочим &gt;&gt; </a></div>
     </div>
