--- a/notes/markettiming/index.html
+++ b/notes/markettiming/index.html
@@ -108,7 +108,7 @@
     <div class="pure-g">
     <div class="pure-u-1-3 left"><a href="/notes/bonds_in_portfolio"> &lt;&lt; Облигации в инвестиционном портфеле </a></div>
     <div class="pure-u-1-3 center"><a href="/notes"> &uarr; Заметки о финансах &uarr; </a></div>
-    <div class="pure-u-1-3 right"><a href="/notes/fairprice"> Справедливая цена &gt;&gt; </a></div>
+    <div class="pure-u-1-3 right"><a href="/notes/market_to_gdp"> Рост ВВП, прибыли компаний, капитализация и доходность рынка акций &gt;&gt; </a></div>
     </div>
 </div>
 </div>
